--- a/day 9/Frontend/src/index.css
+++ b/day 9/Frontend/src/index.css
@@ -25,3 +25,9 @@ html {
   color: white;
  
 }
+.note-create-form{
+  display: flex;
+  gap: 1rem;
+  padding-inline: 3rem;
+  padding-block: 1rem;
+}
